...
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPagina"
        app:layout_constraintBottom_toTopOf="@id/btnSearch">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movie"/>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
...
