...
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/menuHamburger"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="@dimen/common_padding_default"
                        android:contentDescription="@string/menu_drawer"
                        android:src="@drawable/ic_menu" />

...
